Fix spacing of lists; only bottom margin on last element

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -519,8 +519,12 @@ p {
 }
 
 ul,ol {
-	margin-bottom: 1em;
+	margin-bottom: 0;
 	padding-left: 1em;
+}
+
+ul:last-child, ol:last-child {
+    margin-bottom: 1em;
 }
 
 li {
